--- a/Code/todo/backend/Pipfile
+++ b/Code/todo/backend/Pipfile
@@ -11,6 +11,8 @@ psycopg2-binary = "~=2.8.5"
 dj-database-url = "==0.5.0"
 pytest = "*"
 pytest-django = "*"
+djangorestframework = "~=3.11.0"
+django-cors-headers = "==3.4.0"
 
 [requires]
 python_version = "3.8"
