--- a/Code/todo/backend/Dockerfile
+++ b/Code/todo/backend/Dockerfile
@@ -5,7 +5,7 @@ FROM python:3.8
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-# Set work directory
+# Set working directory
 WORKDIR /code
 
 # Install dependencies
