--- a/Code/todo/backend/docker-compose.dev.yml
+++ b/Code/todo/backend/docker-compose.dev.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  web: &web
+  api:
     build: .
     command: python /code/manage.py runserver 0.0.0.0:8000
     environment:
